--- a/practice_0730/.project
+++ b/practice_0730/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>study_home_practice</name>
+	<name>practice_0730</name>
 	<comment></comment>
 	<projects>
 	</projects>
