--- a/study_0829/Database.ini
+++ b/study_0829/Database.ini
@@ -4,11 +4,37 @@
 [변수] - [자료구조(ex.배열)] - (함수) - (클래스) - (객체구조) - [텍스트 파일] - [csv] - [데이터베이스]
 
 계층형 데이터베이스 (Hierarchical DBMS)
-관계형 데이터베이스 (Realtional DBMS)
 객체형 데이터베이스 (Object-Oriented DBMS)
 네트워크 데이터베이스 (Network DBMS)
+관계형 데이터베이스 (Realtional DBMS)
+
+RDBMS
+    테이블 형태로 구성된 데이터베이스
+사원번호    사원이름    사원직급    부서이름    위치
+0001        Adam        대리        개발        서울
+0002        Beny        부장        본부        분당
+0003        Chen        사원        개발        서울
+
+데이터의 독립 특성을 규정해서 데이터 묶음으로 나눈다.
+
+사원번호    사원이름    사원직급    부서코드
+0001        Adam        대리        10
+0002        Beny        부장        20
+0003        Chen        사원        10
+
+부서코드    부서이름    위치
+10          개발        서울
+20          본부        분당
 
 동시성, 보안, 성능
 
 장점 : 효율적인 관리, 정확성, 백업 빛 복구, 중복된 데이터 처리
 단점 : 데이터를 넣을 때 중복된 데이터 확인
+
+SQL (Structured Query Language) -> RDBMS 사용 언어
+
+명령어
+DQL(Data Query Language) : RDBMS 저장한 데이터를 원하는 방식으로 조회하는 명령어
+DML(Data Manipulation Language) : RDBMS 테이블 데이터를 저장, 수정, 삭제하는 명령어
+DDL(Data Definition Language) : RDBMS 관리를 위해서 테이블을 포함하나 객체들을 생성, 수정, 삭제하는 명령어
+
