--- a/study_0830/database1.ini
+++ b/study_0830/database1.ini
@@ -20,3 +20,38 @@ DATE - 날짜형식 : 세기, 연, 월, 일, 시, 분, 초
 BLOB - 2진 데이터
 CLOB - 대용량 텍스트
 BFILE - 파일
+
+집합 연산자
+1. UNION
+    두 개의 SELECT문 결과를 결합한다. 중복된 행을 제거 O
+    조건 : SELECT문 동일한 수의 열을 가져야하고, 유사한 데이터 타입을 가져야한다.
+    SELECT column1 FROM table1
+    UNION
+    SELECT column2 FROM table2
+
+# 사원번호, 이름, 직급, 급여, 부서번호 출력 (부서번호 20, 급여 2000 이상, 부서번호 30, 급여 2000 이상)
+SELECT EMPNO, ENAME, JOB, SAL, DEPTNO
+FROM EMP
+WHERE DEPTNO = 20 AND SAL >= 2000
+UNION
+SELECT EMPNO, ENAME, JOB, SAL, DEPTNO
+FROM EMP
+WHERE DEPTNO = 30 AND SAL >= 2000;
+
+2. UNION ALL
+두 개 SELECT문 결과를 결합한다. 중복된 행을 제거 X
+    SELECT column1 FROM table1
+    UNION ALL
+    SELECT column2 FROM table2
+
+3. INTERSECT
+두 개의 SELECT문이 결과 중 공통된 행만 반환한다. (교집합)
+    SELECT column1 FROM table1
+    INTERSECT
+    SELECT column2 FROM table2
+
+4. EXCEPT (일부에서는 MINUS)
+첫 번째 SELECT문에 결과에서 두 번째 SELECT문의 결과에 있는 행들을 제외하고 나머지만 반환
+    SELECT column1 FROM table1
+    EXCEPT
+    SELECT column2 FROM table2
