--- a/study_0901/review.ini
+++ b/study_0901/review.ini
@@ -1,4 +1,4 @@
---°¢ Á÷¿øÀÇ ÀÌ¸§°ú ºÎ¼­ ÀÌ¸§À» Ãâ·Â. (ºÎ¼­ ¹øÈ£ ´ë½Å ºÎ¼­ ÀÌ¸§)
+--ê° ì§ì›ì˜ ì´ë¦„ê³¼ ë¶€ì„œ ì´ë¦„ì„ ì¶œë ¥. (ë¶€ì„œ ë²ˆí˜¸ ëŒ€ì‹  ë¶€ì„œ ì´ë¦„)
 SELECT E.ENAME, D.DNAME
 FROM EMP E, DEPT D
 WHERE E.DEPTNO = D.DEPTNO
@@ -10,11 +10,11 @@ SELECT E.ENAME, D.DNAME
 FROM EMP E
 JOIN DEPT_DATA D ON E.DEPTNO = D.DEPTNO;
 
---°¢ Á÷¿øÀÇ ÀÌ¸§°ú ÇØ´ç Á÷¿øÀÇ ±Þ¿©¸¦ Á¶È¸ÇÏµÇ, ±Þ¿©°¡ ºÎ¼­ Æò±Õ ±Þ¿©º¸´Ù ³ôÀº °æ¿ì¿¡´Â "»óÀ§"¶ó°í Ç¥½ÃÇÏ°í ±× ¿Ü¿¡´Â "ÀÏ¹Ý"ÀÌ¶ó°í Ãâ·Â
+--ê° ì§ì›ì˜ ì´ë¦„ê³¼ í•´ë‹¹ ì§ì›ì˜ ê¸‰ì—¬ë¥¼ ì¡°íšŒí•˜ë˜, ê¸‰ì—¬ê°€ ë¶€ì„œ í‰ê·  ê¸‰ì—¬ë³´ë‹¤ ë†’ì€ ê²½ìš°ì—ëŠ” "ìƒìœ„"ë¼ê³  í‘œì‹œí•˜ê³  ê·¸ ì™¸ì—ëŠ” "ì¼ë°˜"ì´ë¼ê³  ì¶œë ¥
 SELECT E1.ENAME, 
 CASE
-    WHEN E1.SAL > E2.AVG_SAL THEN CONCAT('»óÀ§ : ', E1.SAL)
-    ELSE CONCAT('ÀÏ¹Ý : ', E1.SAL)
+    WHEN E1.SAL > E2.AVG_SAL THEN CONCAT('ìƒìœ„ : ', E1.SAL)
+    ELSE CONCAT('ì¼ë°˜ : ', E1.SAL)
     END AS SAL, E1.DEPTNO
 FROM EMP E1, (SELECT ROUND(AVG(SAL)) AS AVG_SAL, DEPTNO FROM EMP GROUP BY DEPTNO) E2
 WHERE E1.DEPTNO = E2.DEPTNO
@@ -23,14 +23,14 @@ ORDER BY DEPTNO;
 -----------------------review
 SELECT E.ENAME, E.SAL,
 CASE
-    WHEN E.SAL > (SELECT ROUND(AVG(SAL)) FROM EMP WHERE E.DEPTNO = EMP.DEPTNO) THEN CONCAT('»óÀ§ : ', E.SAL)
-    ELSE CONCAT('ÀÏ¹Ý : ', E.SAL)
+    WHEN E.SAL > (SELECT ROUND(AVG(SAL)) FROM EMP WHERE E.DEPTNO = EMP.DEPTNO) THEN CONCAT('ìƒìœ„ : ', E.SAL)
+    ELSE CONCAT('ì¼ë°˜ : ', E.SAL)
     END AS SAL, E.DEPTNO
 FROM EMP E
 ORDER BY DEPTNO;
 
---°¢ ºÎ¼­º°·Î ¼ÓÇÑ Á÷¿øÀÇ ¼ö¿Í Æò±Õ ±Þ¿©¸¦ Á¶È¸ÇÏµÇ,
---±Þ¿©°¡ ÇØ´ç ºÎ¼­ÀÇ Æò±Õ ±Þ¿©º¸´Ù ³ôÀº Á÷¿øÀÇ ÀÌ¸§°ú ±Þ¿©¸¦ ÇÔ²² Ãâ·Â(Æò±Õ ±Þ¿© ³»¸²Â÷¼øÀ¸·Î Á¤·Ä)
+--ê° ë¶€ì„œë³„ë¡œ ì†í•œ ì§ì›ì˜ ìˆ˜ì™€ í‰ê·  ê¸‰ì—¬ë¥¼ ì¡°íšŒí•˜ë˜,
+--ê¸‰ì—¬ê°€ í•´ë‹¹ ë¶€ì„œì˜ í‰ê·  ê¸‰ì—¬ë³´ë‹¤ ë†’ì€ ì§ì›ì˜ ì´ë¦„ê³¼ ê¸‰ì—¬ë¥¼ í•¨ê»˜ ì¶œë ¥(í‰ê·  ê¸‰ì—¬ ë‚´ë¦¼ì°¨ìˆœìœ¼ë¡œ ì •ë ¬)
 SELECT DEPTNO, COUNT(*) AS EMP_COUNT, ROUND(AVG(SAL)) AS AVER_SAL FROM EMP GROUP BY DEPTNO;
 
 SELECT E1.ENAME, E1.SAL, E2.DEPTNO
@@ -67,7 +67,7 @@ JOIN DEPT_SUM DS ON E.DEPTNO = DS.DEPTNO
 WHERE E.SAL > DS.AVG_SAL
 ORDER BY DS.AVG_SAL;
 
---°¢ Á÷¿øÀÇ ÀÌ¸§°ú º¸³Ê½º¸¦ Á¶È¸ÇÏµÇ, º¸³Ê½º°¡ ¾ø´Â Á÷¿øµé Áß¿¡¼­ °¡Àå ±Þ¿©°¡ ³ôÀº Á÷¿øÀÇ ÀÌ¸§°ú ±Þ¿©¸¦ Ãâ·Â
+--ê° ì§ì›ì˜ ì´ë¦„ê³¼ ë³´ë„ˆìŠ¤ë¥¼ ì¡°íšŒí•˜ë˜, ë³´ë„ˆìŠ¤ê°€ ì—†ëŠ” ì§ì›ë“¤ ì¤‘ì—ì„œ ê°€ìž¥ ê¸‰ì—¬ê°€ ë†’ì€ ì§ì›ì˜ ì´ë¦„ê³¼ ê¸‰ì—¬ë¥¼ ì¶œë ¥
 SELECT ENAME, SAL
 FROM EMP
 WHERE COMM IS NULL AND SAL = (SELECT MAX(SAL) FROM EMP WHERE COMM IS NULL);
