--- a/study_0901/database1_chapter10.ini
+++ b/study_0901/database1_chapter10.ini
@@ -126,16 +126,49 @@ CREATE TABLE FOOD (
 );
 
 2. ALTER : 이미 존재하는 데이터베이스 객체를 변경한다.
-ALTER 객체 객체명 ADD COLUMN 열이름, 자료형 : 열 추가
-      TABLE EMP  COLUMN 열이름, 자료형 : 열 수정
-                 DROP COLUMN 열이름 : 열 삭제
+ALTER 객체 객체명 ADD COLUMN 열이름, 자료형; : 열 추가
+      TABLE EMP  COLUMN 열이름, 자료형; : 열 수정
+                 DROP COLUMN 열이름; : 열 삭제
 
-3. DROP
+3. DROP : 데이터베이스 객체를 삭제한다.
+DROP 객체 객체명;
 
-4. TRUNCATE
+4. COMMENT : 데이터베이스 객체에 대한 설명(주석)을 추가한다.
+COMMENT ON 객체 객체명 IS '설명~~~';
 
-5. RENAME
+5. RENAME : 데이터베이스 객체의 이름을 변경한다.
+RENAME 객체 객체명 TO 새로운 객체명;
 
-6. COMMENT
+6. TRUNCATE : 테이블에서 모든 행을 제거하여 초기 상태로 만든다.
+TRUNCATE TABLE 테이블명;
 
-7. GRANT, REVOKE : 
+7. GRANT, REVOKE : 사용자에게 권한을 부여하거나 회수한다.
+GRANT SELECT, INSERT ON 객체명 TO 유저명;
+REVOKE SELECT, UPDATE ON 객체명 TO 유저명;
+
+# 객체 종류
+1. 테이블(Table)
+2. 인덱스(Index) : 검색 속도를 향상시키기 위해서 사용된다.
+3. 뷰(View) : 우리가 쿼리 결과를 볼 수 있도록 만들어진 가상 테이블, 저장 공간 차지하지 않는다.
+4. 저장 프로시저(Stored Procedure) : SQL문과 프로그래밍 로직을 결합해서 실행가능한 코드 단위로,
+    데이터베이스 내부 프로그램이다.
+5. 트리거(Trigger) : 데이터베이스에서 트리거는 발생하는 이벤트(작업)을
+    자동으로 응답하여 실행되도록 설정한 작업
+6. 함수(Function)
+
+# 제약 조건
+1. Primary KEY 기본키
+2. Foreign KEY 외래키
+3. Unique 고유 제약 조건 - 중복 방지
+    TABLE EMP COLUMN 열이름 자료형 UNIQUE;
+4. 체크 제약 조건
+    TABLE EMP COLUMN 열이름 자료형 CHECK(조건식);
+5. NOT NULL 제약 조건
+    TABLE EMP COLUMN 열이름 자료형 NOT NULL;
+    
+    CREATE TABLE FOOD (
+    id NUMBER(4),
+    name varchar(10) NOT NULL,
+    PRIMARY KEY (id) <- 기본키에는 자체적으로 NOT NULL 기능이 들어있다.
+    );
+
