--- a/study_0901/FrontEnd1.ini
+++ b/study_0901/FrontEnd1.ini
@@ -41,7 +41,7 @@ span 태그는 다른 요소들과 같은 줄에서 나타난다. (인라인 단
     ...
 </ol>
 
-- 순서 없는 리스트(unordered list) - <un></un>
+- 순서 없는 리스트(unordered list) - <ul></ul>
 -, *, ●
 <ul>
     <li></li>
