--- a/study_0905/css02.ini
+++ b/study_0905/css02.ini
@@ -39,4 +39,50 @@ ID 선택자는 클래스 선택자보다 우선순위가 높다.
 클래스 선택자는 태그 이름 선택자보다 우선순위가 높다.
 ID > class > Tag Name
 
-4. 자손 및 자식 관계
+4. 자손 및 자식 관계(CSS Combinators) : 여러 개의 요소 중 특정 관계 있는 하위요소나 자식 요소만을 선택한다.
+
+1) 자손(combinator: 공백) : 조상과 후손 사이의 모든 하위 요소들을 대상으로 한다.
+2) 자식(combinator: >) : 직접적인 자식 요소들을 대상으로 한다.
+
+div ul li {
+    color: red;
+}
+→ div 안에 있는 ul 안에 있는 li에 적용하겠다
+
+div>ul>li {
+    color: red;
+}
+→ div 바로 아래 있는 ul 바로 안에 있는 li에 적용한다.
+
+5. 가상 클래스(Pseudo-Class) : 특정 상태나 위치 등 특별한 조건을 가진 요소를 선택하기 위해 사용된다.
+a:hover {
+    color: red;
+}
+//a링크 위에 마우스가 올라가면
+
+ul li:first-child {
+    font-weight:bold;
+}
+//li 첫번째 아이템만 굵게
+
+ul li:nth-child(odd) {
+    background-color:dodgeblue;
+}
+//리스트 홀수번째 아이템만 배경색 설정
+
+6. 전체 선택자(Universal Selector) : 모든 HTML 요소를 선택, 기호는 *
+* {
+    margin: 0;
+}
+
+7. 속성 선택자(Attribute Selector) : 특정 속성 값을 가진 HTML 요소를 선택, 기호는 대괄호[]
+input[type="submit"] {
+    color: white;
+}
+
+test02 파일 이용
+1. <h1> 태그의 글자 크기 32px
+2. p 태그의 글자색 빨간색
+3. .list 클래스가 지정된 <ul> 안의 li 들은 배경색이 연두색
+4. container 안에 있는 p 태그는 글자 파란색, exception class를 가진 p 태그는 글자 연두색
+5. 링크에 마우스를 올리면 배경색이 노란색
