--- a/study_0905/css02.ini
+++ b/study_0905/css02.ini
@@ -54,6 +54,18 @@ div>ul>li {
 }
 → div 바로 아래 있는 ul 바로 안에 있는 li에 적용한다.
 
+<div>
+<ul>
+<div>
+<li>리스트1</li>
+</div>
+<li>리스트2</li>
+</ul>
+</div>
+
+자손 : 리스트1, 리스트2
+자식 : 리스트2
+
 5. 가상 클래스(Pseudo-Class) : 특정 상태나 위치 등 특별한 조건을 가진 요소를 선택하기 위해 사용된다.
 a:hover {
     color: red;
@@ -84,5 +96,6 @@ test02 파일 이용
 1. <h1> 태그의 글자 크기 32px
 2. p 태그의 글자색 빨간색
 3. .list 클래스가 지정된 <ul> 안의 li 들은 배경색이 연두색
-4. container 안에 있는 p 태그는 글자 파란색, exception class를 가진 p 태그는 글자 연두색
+4. container 안에 있는 p 태그는 글자 파란색,
+    exception class를 가진 p 태그는 글자 연두색
 5. 링크에 마우스를 올리면 배경색이 노란색
