--- a/study_0905/css03.ini
+++ b/study_0905/css03.ini
@@ -22,3 +22,20 @@
 7. letter-spacing : 문자 간격
 8. text-transform : 대소문자 변환(uppercase/lowercase/capitalize)
 
+# 박스 모델
+CSS에서 레이아웃과 공간 배치를 다루는 개념
+HTML 요소들은 모두 사각형 박스로 간주되며, 여러가지 속성을 가지고 있다.
+
+1. 콘텐츠 영역
+width, height
+2. 패딩
+padding-top, padding-right, padding-bottom, padding-left
+padding : 24px 0px 0px 24px (시계방향)
+3. 테두리 영역
+border-style, border-width, border-color
+4. 마진 영역
+margin-top, margin-right, margin-bottom, margin-left
+
+실제 너비: width + padding-right + padding-left + border-right-width + border-left-width + margin-right + margin-left
+실제 높이 (마찬가지!)
+
