--- a/study_0905/css04.ini
+++ b/study_0905/css04.ini
@@ -31,7 +31,21 @@ width, height, padding, margin
 부모 컨테이너에 대해 display:flex를 설정하고, 자식 아이템들을 유연하게 배치할 수 있다.
 자식 아이템(flex-direction, justify-content, align-items)
 
+<div style="display:flex; background-color:gray;">
+    <div style="flex:1; background-coloer:red;"> item1 </div>
+    <div style="flex:2; background-coloer:green;"> item2 </div>
+    <div style="flex:1; background-coloer:blue;"> item3 </div>
+</div>
+
 5. Grid Layout : 그리드 시스템을 구축해서 웹 페이지 내 아이템을 정렬, 배치
 부모 컨테이너 display:grid;
 자식 아이템(grid-template-columns, grid-template-rows, grid-column-start)
 
+<div style="display: grid; grid-template-columns:1fr 2fr 1fr; grid-gap:10px;">
+    <div stye="background-color:red;"> item1 </div>
+    <div stye="background-color:green;"> item1 </div>
+    <div stye="background-color:blue;"> item1 </div>
+</div>
+
+숙제 test10 음식점 사진 배경 추가
+Grid Layout 부분이 flex 보단 작은 간격
