--- a/study_0907/javascript03.ini
+++ b/study_0907/javascript03.ini
@@ -100,3 +100,9 @@ inner.addEventListener('click', function(event) {
 });
 
 3. event.cancleBubble = true;
+
+반응속도 테스트
+웹 페이지에 랜덤한 알파벳이 표시되고, 사용자가 해당 문자를 키보드로 입력한다.
+정확한 키를 누르면 정답과 함께 시간이 표시되고
+그렇지 않으면 오답이 표시된다.
+keydown or keypress
