--- a/study_0907/javascript03.ini
+++ b/study_0907/javascript03.ini
@@ -107,3 +107,42 @@ inner.addEventListener('click', function(event) {
 그렇지 않으면 오답이 표시된다.
 keydown or keypress, event, Date.now(), Math.random()
 var alphabet = 'abcdefghijklmnopqrstuvwxyz';
+
+test10.html < 숙제
+텍스트로 바꾸고 텍스트에 마우스오버가 되면 이미지가 바뀌게끔 (마우스를 떼도 유지되게)
+
+기존 코드
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>onload로 이미지 크기 출력</title>
+    <script>
+        function changeImage() {
+            var sel = document.getElementById("sel");
+            var img = document.getElementById("myImg");
+            img.onload = function () {  // 이미지 크기 출력
+                var mySpan = document.getElementById("mySpan");
+                mySpan.innerHTML = img.width + "x" + img.height;
+            }
+            var index = sel.selectedIndex; // 선택된 옵션 인덱스
+            img.src = sel.options[index].value; // <option>의 value 속성
+        }
+    </script>
+</head>
+
+<body onload="changeImage()">
+    <h3>onload로 이미지 크기 출력</h3>
+    <hr>
+    <form>
+        <select id="sel" onchange="changeImage()">
+            <option value="images/apple.png">사과
+            <option value="images/banana.png">바나나
+            <option value="images/mango.png">망고
+        </select>
+        <span id="mySpan">이미지 크기</span>
+    </form>
+    <p><img id="myImg" src="images/apple.png" alt="."></p>
+</body>
+
+</html>
