--- a/study_0910/react01.ini
+++ b/study_0910/react01.ini
@@ -191,7 +191,7 @@ this 키워드를 사용하려면 생성자 내부나 메서드 선언시 바인
 class Example extends React.Component {
     constructor(props) {
         super(props)
-        this.state = {count:0};
+        this.state = {count:0}; // 변수는 {a:0, b:0, ...} 이렇게 추가할 수 있다.
 
         this.handleClick = this.handleClick.bind(this);
     }
