--- a/study_0918/Django02.ini
+++ b/study_0918/Django02.ini
@@ -44,3 +44,29 @@ urllib.parse 모듈은 URL 구문 분석 및 조작에 사용된다.
 4) 예외처리
 + 네트워크 오류나 잘못된 요청 등이 발생 가능한 상황에서 예외처리를 할 수 있다.
 + 주요 예외로 http.client.HTTPException
+
+4. Django 내장 웹 클라이언트
+django.test.Client 클래스를 사용하여 Django 어플리케이션 내에서 테스트 및 시뮬레이션 목적으로 HTTP 요청을 만들 수 있다.
+주로 테스트 프레임워크에서 사용되지만, 일반적인 웹 클라이언트로서도 활용할 수 있다. (잘 안씀, 비추천)
+
+1) HTTP 요청 보내기
++ get(), post(), put(), patch(), delete() 등의 메서드를 사용하여 HTTP 요청을 보낼 수 있다.
++ 필요한 경우 URL, 데이터, 헤더 등을 지정할 수 있다.
+
+2) 응답 처리
++ 해당하는 HTTP 응답 객체를 반환한다.
+
+3) 세션 유지
++ 한번 연결된 세션을 유지하고 여러 요청에 대한 동일한 세션 상태를 유지할 수 있다.
+
+4) 폼 처리하기
++ post() 메소드를 사용하여 데이터를 제출할 수 있다. 이는 실제 브라우저 제출과 비슷한 동작을 한다.
+
+- 웹 서버 라이브러리
+
+http.server 모듈에 포함되어 있는 클래스
+1. HTTPServer
++ http.server.HTTPServer 클래스는 기본적인 HTTP 서버를 구현하는 데 사용된다.
++ TCP 소켓을 생성하고 요청을 수신하기 위해 지정된 IP 주소와 포트에 대기한다.
+
+2. BaseHTTPRequestHandler
