--- a/study_0919/Django.ini
+++ b/study_0919/Django.ini
@@ -73,6 +73,16 @@ post.save()
 ; python manage.py makemigrations
 ; python manage.py migrate
 
++ 새로운 마이그레이션 생성
+python manage.py makemigrations 앱이름 --empty
+
++ 마이그레이션 파일을 만들고 migrate 실행 이후 왜 다시 수정이 안될까?
+마이그레이션은 Django에서 데이터베이스 스키마를 변경하는 작업을 추적하는 방법이다.
+모델에 대한 변경 사항을 마이그레이션 파일로 생성한 후, migrate를 적용하여 스키마를 업데이트한다.
+새로운 데이터 생성, 삭제 등의 단순 작업들은 Python 코드 수준에서만 이루어진다.
+이러한 작업들은 데이터베이스 스키마에 영향을 줄 수가 없다.
+
+
 - URLs 와 뷰
 + URLconf(URL configuration)는 특정 URL이 뷰와 어떻게 연결되는지 장고에게 알려주는 매커니즘
 장고가 웹 요청을 받으면 이를 처리하기 위해 URLconf를 사용하여 해당 요청 URL을 기반으로 적절한 뷰를 찾는다.
@@ -166,3 +176,35 @@ child.html 파일은 parent.html 파일을 상속받는다. extends
 부모 템플릿에서 정의한 title 및 content 블록을 제정의하여 자신만의 내용을 추가한다. block
 
 프로젝트 설계 -> 모델 정의 -> URL conf 지정 -> 템플릿 정의 -> 뷰 정의
+
+- 뷰 함수
+
++ index() : 전체 질문 목록을 보여주는 페이지 처리
++ detail() : 하나의 질문에 대한 세부 정보 처리
++ vote() : 사용자의 투표를 처리하는 로직
++ result() : 특정 질문에 대한 투표 결과를 보여주는 페이지 처리
+
+from django.http import HttpResponse
+from django.shortcuts import get_object_or_404, render
+
+from .models import Question
+
+def index(request):
+    lastest_q_list = Question.objects.order_by('-date')
+    context = {'last Q' : lastest_q_list}
+    return render(request, 'index.html', context)
+
+def detail(request, quest_id):
+    question = get_object_or_404(Question, pk=quest_id)
+    return render(request, 'detail.html', {'question' : question})
+
+def result(request, quest_id):
+    question = get_object_or_404(Question, pk=quest_id)
+    return render(request, 'detail.html', {'question' : question})
+
+def vote(request, quest_id):
+    # 로직 추가
+
+
+
+// django-admin startproject vote <- 새로운 장고 프로젝트
