--- a/study_0920/Django02.ini
+++ b/study_0920/Django02.ini
@@ -35,9 +35,17 @@ fieldsets : 관련된 필드들을 그룹화한다.
 class NewModelAdmin(admin.ModelAdmin):
     fieldsets = (
         ('Group1', {
-            field : ('field1', field2 ...)
+            'fields' : ('field1', 'field2' ...)
         }),
         ('Group2', {
             'fields' : ('field3', 'field4', ...)
         })
     )
+
+date_hierarchy : 날짜 계층 구조(navigation)을 생성하여 날짜 기반으로 탐색 기능을 제공한다.
+class NewModelAdmin(admin.ModelAdmin):
+    date_hierarchy = 'created_at'
+
+prepopulated_fields : 다른 필드 값을 기반으로 자동으로 값 채우기
+actions : 선택된 객체들에 대해 일괄 작업을 사용 가능하게
+ordering : 정렬 순서 설정
