--- a/study_0922/Django.ini
+++ b/study_0922/Django.ini
@@ -85,7 +85,7 @@ def hello(request):
 
 + 클래스형 뷰 (OOP)
 from django.http import HttpResponse
-from django.views import Views
+from django.views import View
 
 class HelloView(View):
     def get(self, request):
@@ -135,7 +135,7 @@ from django.views import Views
 
 class MyMixin:
     def dispatch(self, request, *arg, **kwargs):
-        pring("Request Process")
+        print("Request Process")
         return super().dispatch(request, *arg, **kwargs)
 
 class HelloView(MyMixin, View):
