--- a/study_0921/class01/Django.ini
+++ b/study_0921/class01/Django.ini
@@ -2,7 +2,8 @@
 
 # 모델 -> 데이터베이스 마이그레이션 -> 템플릿 -> 뷰 -> URLS
 
-django-admin startproject 앱이름(class01)
+django-admin startproject 프로젝트이름(class01)
+python manage.py startapp 앱이름(board)
 
 settings.py -> INSTALLED_APPS -> 'board'
 
