--- a/study_0922/Django.ini
+++ b/study_0922/Django.ini
@@ -189,7 +189,7 @@ class NewModelUpdate(UpdateView):
 # 추가적인 로직이 필요하다면 메서드 오버라이드하여 사용할 수 있다. (get_context_data, form_valid 등)
 
 - 제네릭 뷰 : 공통적으로 사용할 수 있는 기능들을 추상화하여 제공해주는 클래스형 뷰
-from django.views.generic 패키지게 있다.
+from django.views.generic 패키지가 있다.
 
 + Base View : View, TemplateView, RedirectView
 + Generic Display View : ListView, DetailView
