--- a/study_0925/Django02.ini
+++ b/study_0925/Django02.ini
@@ -125,7 +125,7 @@ sudo service nginx restart
 
 + Apache 설정 (환경설정 파일, httpd.conf)
 
-<VirtualHost *::80>
+<VirtualHost *:80>
     ServerName your_domain
 
     WSGIScriptAlias //path/to/myapp/django/app/wsgi.py
@@ -175,7 +175,52 @@ location /static/ {
 3) 재시작!
 
 - 보안설정
+1) HTTPS(Hypertext Transfer Protocol Secure) : 웹 통신에서 데이터를 암호화하여 보안을 강화하는 프로토콜이다.
+HTTPS를 사용하기 위해서는 SSL/TLS 인증서가 필요하다. 이는 CA(Certificate Authority)를 구입하거나
+다른 서비스(Let`s Encrypt)를 통해 사용할 수 있다.
+
++ Nginx 예시
+server {
+    listen 80;
+    server_name your_domain;
+    return 301 https://$host$request_url; # 전달받은 HTTP 요청을 모두 HTTPS로 리다이렉트
+}
+
+또는
+
+server {
+    listen 443 ssl;
+    server_name your_domain;
+
+    ssl_certificate /etc/letsencrypt/live/your_domain/fullchain.pem; # 인증서 경로
+    ssl_certificate_key /etc/letsencrypt/live/your_domain/privkey.pem; # 개인키 경로
+}
+
++ Apache 예시
+<VirtualHost *:80>
+    ServerName your_domain
+    Redirect permanent / https://your_domain/
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerName your_domain
+
+    SSLEngine on
+    SSLCertificateFile "/path/to/www.sample_url.com"
+    SSLCertificateKeyFile "/path/to/www.sample_url.com.key"
+</VirtualHost>
+
+2) Django 보안 설정 : 장고 자체에도 보안 기능이 있어서 setting.py에서 설정이 가능하다.
++ DEBUG : 배포 환경에서는 False 설정
++ SECRET_KEY : 암호화 작업
++ ALLOWED_HOSTS : 서비스할 도메인 이름들만 추가하여 해당 호스트들만 작동되게 설정할 수 있다.
++ CSRF_COOKIE_SECURE, SESSION_COOKIE_SECURE : HTTPS를 사용할 경우 이 값들을 TRUE로 설정하여 쿠키가
+    HTTPS를 통해서만 전송되도록 할 수 있다.
++ CSRF_COOKIE_HTTPONLY, SESSION_COOKIE_HTTPONLY : 이 값들을 True로 설정하면 Javascript에서
+    쿠키에 접근하는 것을 방지할 수 있다.
 
 - 배포
 
+
 # 뷰 클래스, 폼 클래스를 활용해서 CRUD를 사용할 수 있는 사이트를 만들어보자.
+# 게시판, 블로그, SNS, 쇼핑몰 ...
