--- a/study_0927/Spring01.ini
+++ b/study_0927/Spring01.ini
@@ -140,3 +140,29 @@ public class NewServlet extends HttpServlet {
         //종료작업
     }
 }
+
+- HttpServletRequest
+
++ getRequestURI() / getRequestURL() : 클라이언트가 요청한 URI, URL을 반환한다.
++ getMethod() : HTTP 요청 메소드를 문자열로 반환한다.
++ getParameter(String name) : 요청 파라미터 중 지정한 이름의 값을 반환한다.
++ getParameterValues(String name) : 동일한 이름을 가진 모든 요청 파라미터의 값을 문자열 배열로 반환한다.
++ getParameterNames() / getParameterMap() : 모든 요청 파라미터의 이름들을 Enum 형태 혹은 Map 형태로 반환한다.
++ getHeader(String name) : 지정한 이름의 HTTP 헤더 값을 문자열로 반환한다.
++ getHeaders(String name) / getHeaderNames() : 지정한 이름의 모든 HTTP 헤더 값들/ 모든 헤더 이름들을 열거형으로 반환한다.
++ getCookies() : 요청에 포함된 모든 쿠키 객체를 배열로 반환한다.
++ getSession(boolean create) : 현재 세션 객체(HttpSession)을 가져온다. 인자 값이 없으면 새로 생성할지 결정할 수 있다.
+
+- HttpServletResponse
+
++ setStatus(int sc) : HTTP 응답 상태를 설정한다.
++ sendError(int sc, String msg) : 에러코드와 에러 메세지를 클라이언트에게 전송
++ setContentType(String type) : 응답의 컨텐츠 타입을 설정한다.
+    HTML 문서로 반환하는 경우 : text/html
+    JSON 데이터를 반환하는 경우 : application/json
++ setHeader(String name, String value) / addHeader(String name, String value)
+    HTTP 헤더의 이름과 값을 추가한다. setHeader : 덮어쓰기, addHeader : 새 값을 추가
++ getWriter() / getOutputStream() : 클라이언트에게 전송될 응답 본문을 작성하기 위한 출력 스트림을 반환한다.
++ addCookie(Cookie cookie) : 새로운 쿠키 객체 (javax.servlet.http.Cookie)를 응답에 추가한다.
++ sendRedirect(String location) : 클라이언트에게 지정된 URL로 리다이렉션하도록 지시하는 302 상태코드와 함께
+    location 헤더 값울 설정하여 전송한다.
