--- a/study_0927/Django01.ini
+++ b/study_0927/Django01.ini
@@ -10,6 +10,8 @@
 2) 프로젝트를 전체 압축하여 files에 업로드 (home/YOUR_ID)
 3) Bash 접속
 4) ls 키워드를 사용하여 README 파일과 압축파일 2개가 존재하는지 확인
+rm -r myfolder 파일 삭제
+
 5) unzip {압출파일}을 사용하여 압축풀기
 6) virtualenv --python=python3.10 {가상환경이름} 으로 가상환경 생성
 7) source {가상환경이름}/bin/activate 으로 가상환경 활성화
