--- a/study_0927/explain.ini
+++ b/study_0927/explain.ini
@@ -11,7 +11,7 @@
 
 2. 이진 탐색(Binary Search) <- example 예제
 이진 탐색은 정렬된 배열에서 특정 값을 찾는데 사용되는 효율적인 알고리즘
-중간 값가 찾으려는 값을 비교해서 검색 범위를 절반으로 줄여나간다.
+중간 값과 찾으려는 값을 비교해서 검색 범위를 절반으로 줄여나간다.
 매 단계 검사해야할 요소가 절반으로 줄어들기 때문에 시간 복잡도는 O(log N)이다.
 
 - 알고리즘 복잡도 : 알고리즘이 얼마나 많은 리소스를 사용하는지 측정하는 방법
