--- a/study_1005/explain01.ini
+++ b/study_1005/explain01.ini
@@ -78,3 +78,86 @@ ${expression} 형태로 주로 변수 값에 접근하거나 출력하는데 사
 
 Hello, ${sessionScope.user.name}
 
+- Core 태그 라이브러리 <c:>
+
++ 조건문 <c:if>, <c:choose>, <c:when>, <c:otherwise>
+<c:choose>
+    <c:when text="${age >= 20}">
+        <p>성인입니다.</p>
+    </c:when>
+
+    <c:otherwise>
+        <p>성인이 아닙니다.</p>
+    </c:otherwise>
+</c:choose>
+
++ 반복문 <c:forEach>, <c:forTokens>
+<c:forTokens var="name" items="철수, 영희, 길동" delims=",">
+    <p><c:out value="${name}"/></p>
+</c:forTokens>
+
++ 기타 태그
+<c:set> : 변수 선언 및 값 할당
+<c:remove> : 변수 삭제
+<c:catch> : 예외 처리
+
+- Fomatting 태그 라이브러리
+
++ Locale 설정 태그 : 현재 페이지에서 사용할 로케일을 지정한다.
+<fmt:setLocale value="ko_kr"/>
+<fmt:setLocale value="en_us"/>
+<fmt:setLocale value="ja_jp"/>
+
++ 메세지 번들 태그 : 번들에서 locale에 맞는 메세지를 지정한다.
+<fmt:setBundle basename="com.example.message"/>
+
++ 메세지 출력 태그 : 번들에서 locale에 맞는 메세지를 출력한다.
+<fmt:message key="welcome.message"/>
+
++ 형변환 태그
+<fmt:formatNumber value="{price}" type="currency" currencySymbol="￦"/>
+
++ 날짜 시간 형식 태그
+<fmt:formatDate value="${date}" pattern="yyyy-MM-dd HH:mm:ss"/>
+
+- SQL 태그 <sql:>
+
++ 데이터베이스 연결 설정 태그 <sql:setDataSource>
+var 안에 있는 이름으로 setDataSource 객체 생성
+
+<sql:setDataSource var="dataSource" driver="com.mysql.jdbc.Driver"
+url="jdbc:mysql://localhose/mydatabase" user="name" password="password"/>
+
++ 쿼리 실행 태그 <sql:query>
+SQL SELECT문을 실행하고 결과를 가져온다.
+<sql:query var="results" dataSource="${dataSource}">
+    SELECT * FROM USER
+</sql:query>
+
++ 쿼리 결과
+<table>
+    <c:forEach var="row" items="${results.row}">
+        <tr>
+            <td>${row.id}</td>
+            <td>${row.name}</td>
+            <td>${row.password}</td>
+        </tr>
+    </c:forEach>
+</table>
+
++ 기타 태그
+<sql:update> : INSERT, UPDATE, DELETE 등 쿼리 실행
+<sql:param> : 쿼리에 파라미터 값을 전달
+
+- XML 태그 라이브러리 <x:> XML 문서를 처리하기 위한 기능
+
++ XML 파싱 태그 : XML 문서나 문자열을 파싱하여 DOM(Document Object Model) 객체로 만든다.
+<x:parse xml="${xmlString}" var"doc"/>
+
++ XPath 검색 태그
+<x:out select="$doc/bookstore/book[1]/title">
+
++ XML 조작 및 반복문 태그
+<x:set>
+<x:if>
+<x:forEach>
