--- a/study_1005/explain01.ini
+++ b/study_1005/explain01.ini
@@ -152,7 +152,7 @@ SQL SELECT문을 실행하고 결과를 가져온다.
 - XML 태그 라이브러리 <x:> XML 문서를 처리하기 위한 기능
 
 + XML 파싱 태그 : XML 문서나 문자열을 파싱하여 DOM(Document Object Model) 객체로 만든다.
-<x:parse xml="${xmlString}" var"doc"/>
+<x:parse xml="${xmlString}" var="doc"/>
 
 + XPath 검색 태그
 <x:out select="$doc/bookstore/book[1]/title">
@@ -161,3 +161,5 @@ SQL SELECT문을 실행하고 결과를 가져온다.
 <x:set>
 <x:if>
 <x:forEach>
+
+성인입니다. 코드 -> 여러 명 만들어주고 성인만 이름, 나이 출력
