--- a/study_1005/explain02.ini
+++ b/study_1005/explain02.ini
@@ -34,4 +34,18 @@ Model, View, Controller
     View 컴포넌트가 데이터와 템플릿 엔진을 사용하여 최종 HTML 페이지를 생성한다.
 5) @Controller 어노테이션 : 컨트롤러 클래스를 사용하기 위해서는 어노테이션을 붙인다.
     각 핸들러 메소드가 특정 URL패턴에 대응되어 HTTP 요청을 처리 후 적절한 응답을 반환한다.
-    
+
+- 서블릿 데이터 선언
+객체 데이터를 선언했을 경우 해당 클래스의 인스턴스마다 독립적인 객체를 생성한다.
+서블릿은 보통 웹 어플리케이션 실행 동안 단 한번 인스턴스화 된다.
+
+만들었던 로그인 페이지의 경우 뷰 3개, 컨트롤러 (서블릿) 1개, 모델 1개로 이루어져 있다.
+
+클래스 추가 UserDAO.java
+
+public class UserDao {
+    private List<User> lst = new ArrayList<>();
+}
+
+private UserDao userdao = new UserDao();
+userdao.lst
